=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.25_01-dev

fix to compile with sfio+ithreads, thanks to Joe Schaefer for the spot

win32 fixes for apache 1.3.20 [Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

adjust perl_clear_symtab() to deal properly bleedperl's version of
cv_undef() (which broke modules with directive handlers)
thanks to Geoffrey Young for the spot

add $r->allowed method [Philippe Troin <phil@fifi.org>]

fix 'make offsite-tar' [Geoffrey Young <gyoung@laserlink.net>]

win32 fixes [Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

fix double-loading bug of Perl{Require,Module}s at startup time

improve Apache::MyConfig [Stas Bekman <sbekman@stason.org>]

back out 'stop win32 crash when bringing down service' change, no
longer needed with 1.3.19
[John Sterling, Will Rowe]

$r->no_cache(0) will unset cache headers
[Geoffrey Young <gyoung@laserlink.net>]

export hvrv2table (needed by Apache::Request) for aix and win32
[Jens-Uwe Mager <jum@helios.de>, Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

fix 'make tar_Apache' [Geoffrey Young <gyoung@laserlink.net>]

make sure global for Apache->request is reset after configuring %ENV
[Gerald Richter <richter@ecos.de>]

adjust 'U' magic functions to Perl 5.7.x-dev prototype change

Put Apache's CFLAGS into AP_CFLAGS instead of CFLAGS, so that
people who like to override CFLAGS from the make line (make
CFLAGS='-arch ppc -arch i386') can do so without stomping the
Apache flags.  [ Wilfredo Sanchez <wsanchez@KnowNow.com> ]

=item 1.25 - January 29, 2001

avoid 'prototype mismatch' warnings in Apache::PerlRun::flush_namespace
[Wenzhong Tang <Tang@appliant.com>]

xsubpp now run with -nolinenumbers (5.004_04 bombs otherwise)

DSO support for hpux with native cc

document Apache->server->register_cleanup
[Perrin Harkins <perrin@primenet.com>]

Apache::Server->loglevel can now be modified